test context in templates

--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Second page</h1>
     <p>Another placeholder, im getting there</p>
+    <ul>
+        {% for lead in leads %}
+        <li>{{ lead }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
