--- a/leads/templates/leads/lead_list.html
+++ b/leads/templates/leads/lead_list.html
@@ -20,7 +20,7 @@
     <h1>Welcome to the lead list: All leads.</h1>
     {% for lead in leads %}
     <div class="lead">
-        {{ lead.first_name }}
+        <a href="/leads/{{lead.pk}}/">{{ lead.first_name }} {{ lead.last_name }}</a> age: {{ lead.age }}
     </div>
     {% endfor %}
 </html>
