--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -17,6 +17,7 @@
     }
 </style>
 <body>
+    <a href="/leads">Go back to leads</a>
     <h1>This is the details of {{lead.first_name}}</h1>
     <p>This persons age is {{ lead.age }}</p>
 </html>
