--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -11,5 +11,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <button type="submit">Submit</button>
     </form>
 </html>
